[package]
name = "brickpack"
version = "0.2.4"
authors = ["Antonio Feitosa <antonio.cfc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.8.1"
http-types = "1.2.0"
mime = "0.3.16"

[dependencies.serde]
features = ['derive']
version = '1.0.110'

[dependencies.async-std]
version = '1.5.0'
features = ['attributes']

