[package]
name = 'brickpack'
version = '0.2.5'
authors = ['Antonio Feitosa <antonio.cfc@gmail.com>']
edition = '2018'

[dependencies]
tide = '0.8.1'
mime = '0.3.16'
http-types = '1.2.0'

[dependencies.serde]
features = ['derive']
version = '1.0.110'

[dependencies.async-std]
version = '1.5.0'
features = ['attributes']
