[package]
name = 'brickpack'
version = '0.2.7'
authors = ['Antonio Feitosa <antonio.cfc@gmail.com>']
edition = '2018'

[dependencies]
tide = '0.9.0'
mime = '0.3.16'
http-types = '2.0.1'

[dependencies.serde]
features = ['derive']
version = '1.0.110'

[dependencies.async-std]
version = '1.6.0'
features = ['attributes']
